# holmes-kb

./: .gitignore  .mcp.json  CLAUDE.md  FORK_CHANGES.md  LICENSE  OPERATIONS.md  README.md  pyproject.toml
agent/: HOLMES.md  pyproject.toml  ruff.toml
agent/holmes/: __init__.py  agent_server.py  cli.py  config.py
agent/holmes/agent/: context_builder.py  context_manager.py  engine.py  ipc_server.py  mcp_manager.py  session.py  skill_manager.py
agent/holmes/agent/tools/: base.py  bash.py  file_read.py  kb_confirm.py  kb_read.py  kb_write.py
agent/holmes/kb/: index_builder.py  merger.py  pending.py  store.py
agent/skills/: holmes-resolve.md
agent/src/tools/kb/: KbSearch.ts  (+6 more)
agent/tests/: e2e_ipc_test.py  test_engine.py  test_ipc_server.py  test_mcp_manager.py
kb/: README.md  pyproject.toml  ruff.toml  start-mcp.sh
kb/holmes/: __init__.py  cli.py  config.py
kb/holmes/cli/: __init__.py  __main__.py  browse.py  config.py  confirm.py  governance.py  import_cmd.py  log.py  pending.py  server.py  setup_cmd.py
kb/holmes/kb/: __init__.py  atomic.py  conflict.py  decay.py  doctor.py  governance.py  history.py  importer.py  linter.py  logger.py  merger.py  pending.py  progress.py  schema.py  search.py  store.py  telemetry.py  telemetry_forwarder.py  telemetry_schema.py  validator.py  vocabulary.py
kb/holmes/mcp/: __init__.py  server.py  tools.py
kb/tests/: conftest.py  eval_metrics.py  smoke_test.sh  test_039_universal_pipeline.py  test_042_pipeline.py  test_043_applies_to.py  test_043_doctor_hygiene.py  test_043_final_sweep.py  test_043_generator_robustness.py  test_043_identity_modes.py  test_043_import_config.py  test_043_import_ir.py  test_043_index_merge.py  test_043_risk_placeholder.py  test_043_ux_polish.py  test_agent_runner.py  test_approve.py  test_approve_tree.py  test_bm25_search.py  test_bug_fixes.py  test_classifier.py  test_cli_dir_batch.py  test_compact.py  test_complex_branching.py  test_curator.py  test_dag_formatter.py  test_dag_harness1.py  test_dag_pipeline.py  test_dag_schema.py  test_dag_tools1.py  test_dag_tools2.py  test_decay.py  test_dedup.py  test_delete.py  test_doc_access.py  test_e2e_dag_pipeline.py  test_e2e_llm.py  test_eval_regression.py  test_extractor_parallel.py  test_extractor_phase.py  (+58 more)
kb/tests/fixtures/: api_heavy_diagnostic.md  gpu_init_failure.md  large_runbook_15k.md  minimal_pitfall.md  multi_kp_postmortem.md  network_switch_failover.md  redis_runbook_zh.md
(+495 files in other folders)
