[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holmes-kb"
version = "0.1.0"
description = "Holmes Knowledge Base lifecycle management"
requires-python = ">=3.11"
dependencies = [
    "python-frontmatter>=1.1.0",
    "openai>=1.30.0",
    "anthropic>=0.27.0",
    "click>=8.1.0",
    "pydantic>=2.6.0",
    "langdetect>=1.0.9",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
]

[project.scripts]
holmes = "holmes.cli:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["holmes"]
omit = ["tests/*"]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-smoke = "bash tests/smoke_test.sh"
